commit header e media query do header

--- a/index.html
+++ b/index.html
@@ -6,5 +6,26 @@
     <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.">
     <title>Bikcraft - Bicicletas Elétricas</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   </head>
+
+  <body>
+    <header class="header-bg">
+      <div class="container flex-wrap-center p-2">
+        <a href="#">
+          <div class="logo">
+          <img src="./img/bikcraft.svg" alt="Bikcraft logo">
+          </div>
+        </a>
+        <nav aria-label="primaria">
+          <ul class="header-menu">
+            <li><a href="#">bicicletas</a></li>
+            <li><a href="#">seguros</a></li>
+            <li><a href="#">contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
