--- a/index.html
+++ b/index.html
@@ -27,5 +27,22 @@
         </nav>
       </div>
     </header>
+    <main class="introducao-bg">
+      <div class="introducao container">
+        <div class="introducao-conteudo">
+          <h1 class="introducao-titulo">
+            Bicicletas feitas<br> sob medida<span>.</span>
+          </h1>
+          <p class="introducao-texto">
+            Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.
+          </p>
+          <a href="#">escolha a sua</a>
+        </div>
+        <div class="introducao-img">
+          <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
+        </div>
+        
+      </div>
+    </main>
   </body>
 </html>
