Adicionado media query na introdução

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <a href="#">escolha a sua</a>
         </div>
         <div class="introducao-img">
+          <source media="(max-width: 800px)" srcset="C:\Users\gabri\OneDrive\Área de Trabalho\bikcraft-final\img\bicicletas">
           <img src="./img/fotos/introducao.jpg" alt="Bicicleta elétrica preta">
         </div>
         
