--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p class="introducao-texto">
             Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.
           </p>
-          <a href="#">escolha a sua</a>
+          <a class="btg" href="#">escolha a sua</a>
         </div>
         <div class="introducao-img">
           <source media="(max-width: 800px)" srcset="C:\Users\gabri\OneDrive\Área de Trabalho\bikcraft-final\img\bicicletas">
