--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </div>
       </div>
     </article>
-    <section class="parceiros">
+    <section class="parceiros" aria-label="Nossos Parceiros">
       <h2 class="font-1-xxl container">
         nossos parceiros<span class="cor-p1">.</span>
       </h2>
@@ -160,6 +160,19 @@
           <img src="img/parceiros/surfbot.svg" alt="">
         </li>
       </ul>
+    </section>
+    <section class="depoimento" aria-label="depoimento">
+      <div class="depoimento-img">
+        <img src="/img/fotos/depoimento.jpg" alt="pessoa pedalando bicicleta bikcraft">
+      </div>
+      <div class="depoimento-txt">
+        <blockquote class="font-1-xl cor-p5">
+          <p>
+            Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.
+          </p>
+        </blockquote>
+        <span class="font-1-m-b cor-p5">ana julia</span>
+      </div>
     </section>
   </body>
 </html>
