--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="seguro-item-">
             <h3 class="font-1-xl cor-6">Prata</h3>
             <div class="seguro-preco">
-              <span class="font-1-xl cor-0">R$199</span>
+              <span class="font-1-xl cor-0">R$ 199</span>
               <span class="font-1-xs cor-6">mensal</span>
             </div>
             <ul class="font-2-m cor-0">
@@ -197,7 +197,7 @@
           <div class="seguro-item-">
             <h3 class="font-1-xl cor-p1">Ouro</h3>
             <div class="seguro-preco">
-              <span class="font-1-xl cor-0">R$199</span>
+              <span class="font-1-xl cor-0">R$ 299</span>
               <span class="font-1-xs cor-6">mensal</span>
             </div>
             <ul class="font-2-m cor-0">
@@ -215,5 +215,38 @@
         </div>
       </div>
     </article>
+    <footer class="footer-bg">
+      <div class="container rodape">
+        <div>
+          <img src="/img/bikcraft.svg" alt="Bikcraft logo">
+        </div>
+        <div class="contato">
+          <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">contato</h3>
+          <ul class="contato-">
+            <li>+55 21 9999-9999</li>
+            <li>contato@bikcraft.com</li>
+          </ul>
+          <ul class="endereco">
+            <li>Rua Ali Perto, 42 - Botafogo</li>
+            <li>Rio de Janeiro - RJ</li>
+          </ul>
+          <div class="redes">
+            <img src="/img/redes/instagram.svg" alt="">
+            <img src="/img/redes/facebook.svg" alt="">
+            <img src="/img/redes/youtube.svg" alt="">
+          </div>
+        </div>
+        <div class="informacoes">
+          <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
+          <ul>
+            <li><a href="#">Bicicletas</a></li>
+            <li><a href="#">Seguros</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+          </ul>
+        </div>
+        <span class="font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
+      </div>
+    </footer>
   </body>
 </html>
