--- a/index.html
+++ b/index.html
@@ -217,16 +217,16 @@
     </article>
     <footer class="footer-bg">
       <div class="container rodape">
-        <div>
+        <div class="logo-footer">
           <img src="/img/bikcraft.svg" alt="Bikcraft logo">
         </div>
         <div class="contato">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">contato</h3>
-          <ul class="contato-">
+          <ul class="contato- font-2-m cor-5">
             <li>+55 21 9999-9999</li>
             <li>contato@bikcraft.com</li>
           </ul>
-          <ul class="endereco">
+          <ul class="endereco font-2-m cor-5">
             <li>Rua Ali Perto, 42 - Botafogo</li>
             <li>Rio de Janeiro - RJ</li>
           </ul>
@@ -238,7 +238,7 @@
         </div>
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
-          <ul>
+          <ul class="font-2-m cor-5">
             <li><a href="#">Bicicletas</a></li>
             <li><a href="#">Seguros</a></li>
             <li><a href="#">Contato</a></li>
