--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <ul>
         <li>
           <a href="#">
-            <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta Magic">
+            <img src="./img/bicicletas/magic-home.jpg" alt="Bicicleta Magic">
             <h3 class="font-1-xl">
             Magic Might
           </h3>
@@ -64,7 +64,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus">
+            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus">
             <h3 class="font-1-xl">
             Nimbus Stark
           </h3>
@@ -75,7 +75,7 @@
         </li>
         <li>
           <a href="#">
-            <img src="/img/bicicletas/nebula-home.jpg">
+            <img src="./img/bicicletas/nebula-home.jpg">
             <h3 class="font-1-xl">
             Nebula Cosmic
           </h3>
@@ -109,14 +109,14 @@
 
           <div class="tecnologia-vantagens">
             <div>
-              <img src="/img/icones/eletrica.svg" alt="">
+              <img src="./img/icones/eletrica.svg" alt="">
               <h3 class="font-1-m cor-0">Motor Elétrico</h3>
               <p class="font-2-s cor-5">
                 Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.
               </p>
             </div>
             <div>
-              <img src="/img/icones/rastreador.svg" alt="">
+              <img src="./img/icones/rastreador.svg" alt="">
               <h3 class="font-1-m cor-0">Rastreador</h3>
               <p class="font-2-s cor-5">
                 Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="tecnologia-img">
-            <img src="/img/fotos/tecnologia.jpg" alt="">
+            <img src="./img/fotos/tecnologia.jpg" alt="">
           </div>
       </div>
     </article>
@@ -163,7 +163,7 @@
     </section>
     <section class="depoimento" aria-label="depoimento">
       <div class="depoimento-img">
-        <img src="/img/fotos/depoimento.jpg" alt="pessoa pedalando bicicleta bikcraft">
+        <img src="./img/fotos/depoimento.jpg" alt="pessoa pedalando bicicleta bikcraft">
       </div>
       <div class="depoimento-txt">
         <blockquote class="font-1-xl cor-p5">
@@ -218,7 +218,7 @@
     <footer class="footer-bg">
       <div class="container rodape">
         <div class="logo-footer">
-          <img src="/img/bikcraft.svg" alt="Bikcraft logo">
+          <img src="./img/bikcraft.svg" alt="Bikcraft logo">
         </div>
         <div class="contato">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">contato</h3>
@@ -231,9 +231,9 @@
             <li>Rio de Janeiro - RJ</li>
           </ul>
           <div class="redes">
-            <img src="/img/redes/instagram.svg" alt="">
-            <img src="/img/redes/facebook.svg" alt="">
-            <img src="/img/redes/youtube.svg" alt="">
+            <img src="./img/redes/instagram.svg" alt="logo instagram">
+            <img src="./img/redes/facebook.svg" alt="logo facebook">
+            <img src="./img/redes/youtube.svg" alt="logo youtube">
           </div>
         </div>
         <div class="informacoes">
