link para contato

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
         <div class="contato">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">contato</h3>
           <ul class="contato- font-2-m cor-5">
-            <li>+55 21 9999-9999</li>
-            <li>contato@bikcraft.com</li>
+            <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+            <li><a href="mailto:gabrielngc@gmail.com">contato@bikcraft.com</a></li>
           </ul>
           <ul class="endereco font-2-m cor-5">
             <li>Rua Ali Perto, 42 - Botafogo</li>
