--- a/termos.html
+++ b/termos.html
@@ -8,6 +8,71 @@
   </body>
 
   <body>
-    
+    <header class="header-bg">
+      <div class="container flex-wrap-center p-2">
+        <a href="#">
+          <div class="logo">
+          <img src="./img/bikcraft.svg" alt="Bikcraft logo">
+          </div>
+        </a>
+        <nav aria-label="primaria">
+          <ul class="header-menu">
+            <li><a href="#">bicicletas</a></li>
+            <li><a href="#">seguros</a></li>
+            <li><a href="#">contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <div class="titulo">
+      <div class="container">
+        <p class="font-2-l-b cor-5">TERMOS DE USO</p>
+        <h1 class="font-1-xxl cor-0">termos e condições<span class="cor-p1">.</span></h1>
+      </div>
+    </div>
+    <div class="termos container">
+      <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
+      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
+      <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+      <h2 class="font-1-l cor-11">3. Seguro Bikcraft</h2>
+    <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+    </p>
+    </div>
+    <footer class="footer-bg">
+      <div class="container rodape">
+        <div class="logo-footer">
+          <img src="./img/bikcraft.svg" alt="Bikcraft logo">
+        </div>
+        <div class="contato">
+          <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">contato</h3>
+          <ul class="contato- font-2-m cor-5">
+            <li><a href="tel:+552199999999">+55 21 9999-9999</a></li>
+            <li><a href="mailto:gabrielngc@gmail.com">contato@bikcraft.com</a></li>
+          </ul>
+          <ul class="endereco font-2-m cor-5">
+            <li>Rua Ali Perto, 42 - Botafogo</li>
+            <li>Rio de Janeiro - RJ</li>
+          </ul>
+          <div class="redes">
+            <img src="./img/redes/instagram.svg" alt="logo instagram">
+            <img src="./img/redes/facebook.svg" alt="logo facebook">
+            <img src="./img/redes/youtube.svg" alt="logo youtube">
+          </div>
+        </div>
+        <div class="informacoes">
+          <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
+          <ul class="font-2-m cor-5">
+            <li><a href="#">Bicicletas</a></li>
+            <li><a href="#">Seguros</a></li>
+            <li><a href="#">Contato</a></li>
+            <li><a href="#">Termos e Condições</a></li>
+          </ul>
+        </div>
+        <span class="font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
+      </div>
+    </footer>
   </body>
 </html>
