--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <li><a href="#">Bicicletas</a></li>
             <li><a href="#">Seguros</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
         <span class="font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
