--- a/termos.html
+++ b/termos.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Termos e condições">
     <title>Termos e Condições</title>
     <link rel="stylesheet" href="./css/style.css">
-  </body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  </head>
 
   <body>
     <header class="header-bg">
@@ -68,7 +74,7 @@
             <li><a href="#">Bicicletas</a></li>
             <li><a href="#">Seguros</a></li>
             <li><a href="#">Contato</a></li>
-            <li><a href="#">Termos e Condições</a></li>
+            <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
         <span class="font-2-m cor-6">Bikcraft © Alguns direitos reservados.</span>
