--- a/bicicletas.html
+++ b/bicicletas.html
@@ -30,108 +30,129 @@
         </nav>
       </div>
     </header>
-    <div class="titulo">
+    <main>
+      <div class="titulo">
       <div class="container">
         <p class="font-2-l-b cor-5">ESCOLHA A MELHOR PARA VOCÊ</p>
         <h1 class="font-1-xxl cor-0">nossas bicicletas<span class="cor-p1">.</span></h1>
       </div>
     </div>
     <div class="bicicletas-bg">
-      <div class="container bicicletas"> 
-        <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
-        <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl">Nimbus Stark</h2>
-          <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <div class="bicicletas-esp">
-            <div class="esp-">
-              <img src="./img/icones/eletrica.svg" alt="">
-              <span>Motor Elétrico
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/carbono.svg" alt="">
-              <span>Fibra de Carbono
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/velocidade.svg" alt="">
-              <span>50 km/h
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/rastreador.svg" alt="">
-              <span>Rastreador
-              </span>
-            </div>
-          </div>
-          <a href="#" class="btg">mais sobre</a>
+      <div class="bicicletas container">
+        <div class="bicicletas-img">
+          <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta Preta">
+          <span class="font-2-m cor-0">R$ 4999</span>
         </div>
-      </div>
-
-      <div class="container bicicletas"> 
-        <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
         <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl cor-0">Magic Might
+          <h2 class="font-1-xl">
+            Nimbus Stark
           </h2>
-          <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <div class="bicicletas-esp">
-            <div class="esp-">
-              <img src="./img/icones/eletrica.svg" alt="">
-              <span>Motor Elétrico
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/carbono.svg" alt="">
-              <span>Fibra de Carbono
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/velocidade.svg" alt="">
-              <span>45 km/h
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/rastreador.svg" alt="">
-              <span>Rastreador
-              </span>
-            </div>
-          </div>
-          <a href="#" class="btg">mais sobre</a>
+          <p class="font-2-s cor-8">
+            A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+          </p>
+            <ul class="bicicletas-esp font-1-m cor-5">
+              <li>
+                <img src="./img/icones/eletrica.svg" alt="">
+                <span>Motor Elétrico</span>
+              </li>
+              <li>
+                <img src="./img/icones/carbono.svg" alt="">
+                <span>Fibra de Carbono</span>
+              </li>
+              <li>
+                <img src="./img/icones/velocidade.svg" alt="">
+                <span>50 km/h</span>
+              </li>
+              <li>
+                <img src="./img/icones/rastreador.svg" alt="">
+                <span>Rastreador</span>
+              </li>
+            </ul>
+            <a href="#" class="btg">
+              mais sobre
+            </a>
         </div>
-      </div>
 
-      <div class="container bicicletas"> 
-        <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Preta">
-        <div class="bicicletas-conteudo">
-          <h2 class="font-1-xl">Nebula Cosmic
-          </h2>
-          <p class="font-2-s cor-8">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
-          <div class="bicicletas-esp">
-            <div class="esp-">
-              <img src="./img/icones/eletrica.svg" alt="">
-              <span>Motor Elétrico
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/carbono.svg" alt="">
-              <span>Fibra de Carbono
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/velocidade.svg" alt="">
-              <span>40 km/h
-              </span>
-            </div>
-            <div class="esp-">
-              <img src="./img/icones/rastreador.svg" alt="">
-              <span>Rastreador
-              </span>
-            </div>
-          </div>
-          <a href="#" class="btg">mais sobre</a>
-        </div>
       </div>
     </div>
+    <div class="bicicletas-bg">
+      <div class="bicicletas container">
+        <div class="bicicletas-img">
+          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta Preta">
+          <span class="font-2-m cor-0">R$ 2499</span>
+        </div>
+        <div class="bicicletas-conteudo">
+          <h2 class="font-1-xl cor-0">
+            Magic Might
+          </h2>
+          <p class="font-2-s cor-5">
+            A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+          </p>
+            <ul class="font-1-m cor-5 bicicletas-esp">
+              <li>
+                <img src="./img/icones/eletrica.svg" alt="">
+                <span>Motor Elétrico</span>
+              </li>
+              <li>
+                <img src="./img/icones/carbono.svg" alt="">
+                <span>Fibra de Carbono</span>
+              </li>
+              <li>
+                <img src="./img/icones/velocidade.svg" alt="">
+                <span>45 km/h</span>
+              </li>
+              <li>
+                <img src="./img/icones/rastreador.svg" alt="">
+                <span>Rastreador</span>
+              </li>
+            </ul>
+            <a href="#" class="btg">
+              mais sobre
+            </a>
+        </div>
+
+      </div>
+    </div>
+    <div class="bicicletas-bg">
+      <div class="bicicletas container">
+        <div class="bicicletas-img">
+          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta Preta">
+          <span class="font-2-m cor-0">R$ 3999</span>
+        </div>
+        <div class="bicicletas-conteudo">
+          <h2 class="font-1-xl">
+            Nebula Cosmic
+          </h2>
+          <p class="font-2-s cor-8">
+            A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
+          </p>
+            <ul class="font-1-m cor-8 bicicletas-esp">
+              <li>
+                <img src="./img/icones/eletrica.svg" alt="">
+                <span>Motor Elétrico</span>
+              </li>
+              <li>
+                <img src="./img/icones/carbono.svg" alt="">
+                <span>Fibra de Carbono</span>
+              </li>
+              <li>
+                <img src="./img/icones/velocidade.svg" alt="">
+                <span>40 km/h</span>
+              </li>
+              <li>
+                <img src="./img/icones/rastreador.svg" alt="">
+                <span>Rastreador</span>
+              </li>
+            </ul>
+            <a href="#" class="btg">
+              mais sobre
+            </a>
+        </div>
+
+      </div>
+    </div>
+    </main>
+    
     <footer class="footer-bg">
       <div class="container rodape">
         <div class="logo-footer">
