fit: media query

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -68,7 +68,7 @@
                 <span>Rastreador</span>
               </li>
             </ul>
-            <a href="#" class="btg">
+            <a href="#" class="btg seta">
               mais sobre
             </a>
         </div>
@@ -106,7 +106,7 @@
                 <span>Rastreador</span>
               </li>
             </ul>
-            <a href="#" class="btg">
+            <a href="#" class="btg seta">
               mais sobre
             </a>
         </div>
@@ -144,7 +144,7 @@
                 <span>Rastreador</span>
               </li>
             </ul>
-            <a href="#" class="btg">
+            <a href="#" class="btg seta">
               mais sobre
             </a>
         </div>
