--- a/seguros.html
+++ b/seguros.html
@@ -37,10 +37,109 @@
       </div>
     </div>
     <main class="seguro-bg">
-      <div class="container seguro">
-
+      <div class="seguros-bg">
+        <div class="seguros container">     
+          <div class="seguro-item">
+            <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
+            <div class="seguro-item-">
+              <h3 class="font-1-xl cor-6">Prata</h3>
+              <div class="seguro-preco">
+                <span class="font-1-xl cor-0">R$ 199</span>
+                <span class="font-1-xs cor-6">mensal</span>
+              </div>
+              <ul class="font-2-m cor-0">
+                <li>Duas trocas por ano</li>
+                <li>Assistência técnica</li>
+                <li>Suporte 08h às 18h</li>
+                <li>Cobertura estadual</li>
+              </ul>
+              <a href="#" class="btg btg-color-5">
+                inscreva-se
+              </a>
+            </div>
+            <div class="seguro-item-">
+              <h3 class="font-1-xl cor-p1">Ouro</h3>
+              <div class="seguro-preco">
+                <span class="font-1-xl cor-0">R$ 299</span>
+                <span class="font-1-xs cor-6">mensal</span>
+              </div>
+              <ul class="font-2-m cor-0">
+                <li>Cinco trocas por ano</li>
+                <li>Assistência especial</li>
+                <li>Suporte 24h</li>
+                <li>Cobertura nacional</li>
+                <li>Desconto em parceiros</li>
+                <li>Acesso ao Clube Bikcraft</li>
+              </ul>
+              <a href="#" class="btg">
+                inscreva-se
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
+    <article class="seguro-vantagens-bg">
+      <div class="container seguros-vantagens">
+        <ul>
+          <li>
+            <img src="./img/icones/eletrica.svg" alt="">
+            <h2 class="font-1-l cor-0">Reparo Elétrico</h2>
+            <p class="font-2-s cor-5">
+              Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.
+            </p>
+          </li>
+          <li>
+            <img src="./img/icones/carbono.svg" alt="">
+            <h2 class="font-1-l cor-0">Carbono</h2>
+            <p class="font-2-s cor-5">
+              Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.
+            </p>
+          </li>
+          <li>
+            <img src="./img/icones/sustentavel.svg" alt="">
+            <h2 class="font-1-l cor-0">Sustentável</h2>
+            <p class="font-2-s cor-5">
+              Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.
+            </p>
+          </li>
+          <li>
+            <img src="./img/icones/rastreador.svg" alt="">
+            <h2 class="font-1-l cor-0">Recuperação</h2>
+            <p class="font-2-s cor-5">
+              Utilizamos o GPS da sua Bikcraft em conjunto com especialistas em segurança para efetuarmos a recuperação.
+            </p>
+          </li>
+          <li>
+            <img src="./img/icones/seguro.svg" alt="">
+            <h2 class="font-1-l cor-0">Segurança</h2>
+            <p class="font-2-s cor-5">
+              Com o seguro Bikcraft você pode ficar tranquilo em saber que o seu dinheiro não será perdido em casos de roubo.
+            </p>
+          </li>
+          <li>
+            <img src="./img/icones/velocidade.svg" alt="">
+            <h2 class="font-1-l cor-0">Rapidez</h2>
+            <p class="font-2-s cor-5">
+              A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </article>
+    <article class="perguntas container">
+      <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
+      <dl>
+        <div>
+          <dt>
+            Qual forma de pagamento vocês aceitam?
+          </dt>
+          <dd>
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+      </dl>
+    </article>
     <footer class="footer-bg">
       <div class="container rodape">
         <div class="logo-footer">
