--- a/seguros.html
+++ b/seguros.html
@@ -30,7 +30,7 @@
         </nav>
       </div>
     </header>
-    <div class="titulo">
+    <div class="titulo" style="padding-bottom: 0;">
       <div class="container">
         <p class="font-2-l-b cor-5">ESCOLHA O SEGURO</p>
         <h1 class="font-1-xxl cor-0">você seguro<span class="cor-p1">.</span></h1>
@@ -40,7 +40,6 @@
       <div class="seguros-bg">
         <div class="seguros container">     
           <div class="seguro-item">
-            <h2 class="font-1-xxl cor-0">seguros<span class="cor-p1">.</span></h2>
             <div class="seguro-item-">
               <h3 class="font-1-xl cor-6">Prata</h3>
               <div class="seguro-preco">
@@ -81,6 +80,7 @@
     </main>
     <article class="seguro-vantagens-bg">
       <div class="container seguros-vantagens">
+        <h2 class="font-1-xxl cor-0" style="margin-bottom: 60px;">vantagens<span class="cor-p1">.</span></h2>
         <ul>
           <li>
             <img src="./img/icones/eletrica.svg" alt="">
@@ -131,10 +131,50 @@
       <h2 class="font-1-xxl">perguntas frequentes<span class="cor-p1">.</span></h2>
       <dl>
         <div>
-          <dt>
+          <dt class="font-1-m-b">
             Qual forma de pagamento vocês aceitam?
           </dt>
-          <dd>
+          <dd class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">
+            Como posso entrar em contato?
+          </dt>
+          <dd class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">
+            Vocês possuem algum desconto?
+          </dt>
+          <dd class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">
+            Qual a garantia que possuo?
+          </dt>
+          <dd class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">
+            Posso parcelar no boleto?
+          </dt>
+          <dd class="font-2-s cor-9">
+            Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
+          </dd>
+        </div>
+        <div>
+          <dt class="font-1-m-b">
+            Quantas trocas posso fazer ao ano?
+          </dt>
+          <dd class="font-2-s cor-9">
             Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.
           </dd>
         </div>
