fit: media query

--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -38,11 +38,8 @@
     </div>
     <div class="nimbus-bg">
   <div class="nimbus container">
-        <div class="nimbus-img">
-          <img src="../img/bicicleta/nimbus1.jpg" alt="bicicleta nimbus preta">
-          <img src="../img/bicicleta/nimbus2.jpg" alt="bicicleta nimbus preta">
-          <img src="../img/bicicleta/nimbus3.jpg" alt="bicicleta nimbus preta">
-        </div>
+    <div class="nimbus-img"><img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta preta" width="560" height="440"><img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta preta" width="560" height="440"><img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta branca" width="560" height="440"> 
+    </div>
         <div class="nimbus-conteudo">
           <p class="font-2-l cor-5">
             A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
