fit:parte de seguros nas paginas de bicicletas

--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -131,17 +131,36 @@
         </li>
         <li>
           <a href="#">
-            <img src="../img/bicicletas/nebula.jpg">
+            <img src="./img/bicicletas/nimbus-home.jpg" alt="Bicicleta Nimbus">
             <h3 class="font-1-xl">
-            Nebula Cosmic
+            Nimbus Stark
           </h3>
           <span class="font-2-m cor-8">
-            R$ 3999
+            R$ 4999
           </span>
           </a>
         </li>
       </ul>
     </article>
+
+    <div id="seguro-bg" class="seguro-bg">
+      <div class="container seguro">
+        <div class="seguro-img">
+          <img src="../img/fotos/seguros.jpg" alt="bicicleta preta">
+        </div>
+        <div class="seguro-introducao">
+          <h2 class="font-1-xxl cor-0">
+            Pedale mais tranquilo com o nosso <span>seguro.</span>
+          </h2>
+          <p class="font-2-l cor-5">
+            Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.
+          </p>
+          <a class="btg" href="#">
+            conheça mais
+          </a>
+        </div>
+      </div>
+    </div>
 
     <footer class="footer-bg">
       <div class="container rodape">
