--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
           <h1 class="font-1-xxl cor-0">Nimbus Stark<span class="cor-p1">.</span></h1>
         </div>
       </div>
-      <div class="contato container">
+      <div class="contatos container">
         <div class="contato-dados">
           <h2 class="font-1-m cor-0">Loja Online</h2>
           <ul class="font-2-s cor-4 contato-endereco">
@@ -46,26 +46,27 @@
             <li>Brasil - Terra - Vita Láctea</li>
           </ul>
 
-          <ul class="contato-email">
+          <ul class="font-2-s cor-4 contato-email">
             <li><a href="mailto:gabrielngc@gmail.com">contato@bikcraft.com</a></li>
             <li><a href="mailto:gabrielngc@gmail.com">assistenciabikcraft@bikcraft.com</a></li>
           </ul>
 
-          <span class="contato-tel"><a href="tel:+552199999999">+55 21 9999-9999</a></span>
+          <span class="font-2-s cor-4 contato-tel" style="margin-bottom: 32px;"><a href="tel:+552199999999">+55 21 9999-9999</a></span>
           <div class="contato-redes">
             <img src="./img/redes/instagram-p.svg" alt="instagram">
             <img src="./img/redes/facebook-p.svg" alt="facebook">
             <img src="./img/redes/youtube-p.svg" alt="youtube">
           </div>
         </div>
-        <form action="" method="get">
-          <label for="name">Nome</label>
+        <!--Formulário-->
+        <form id="contato-form" action="" method="get">
+          <label class="cname" for="name">Nome</label>
           <input type="text" id="name" name="name" placeholder="Seu nome">
-          <label for="telefone">Telefone</label>
-          <input type="txt" id="telefone" placeholder="(21) 9999-9999" name="telefone">
-          <label for="email">Email</label>
+          <label class="ctelefone" for="telefone">Telefone</label>
+          <input type="text" id="telefone" placeholder="(21) 9999-9999" name="telefone">
+          <label class="cemail" for="email">Email</label>
           <input type="email" name="email" id="email" placeholder="contato@email.com">
-          <label for="msg">Mensagem</label>
+          <label class="cmsg" for="msg">Mensagem</label>
           <textarea name="mensagem" id="msg" placeholder="O que você precisa?"></textarea>
           <button class="btg">enviar mensagem</button>
         </form>
@@ -93,6 +94,7 @@
             <img src="./img/redes/youtube.svg" alt="logo youtube">
           </div>
         </div>
+        
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
