--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,49 @@
         
       </div>
     </main>
-
+    <article class="container lojas">
+      <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+      <div class="lojas-item">
+        <div class="lojas-img">
+          <img src="./img/lojas/rj.jpg" alt="localização da loja bikecraft rio de janeiro">
+        </div>
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">Rio de Janeiro</h3>
+          <div class="lojas-localizacao">
+            <ul>
+              <li>Rua Ali Perto, 25</li>
+              <li>Rio de Janeiro - RJ</li>
+            </ul>
+            <ul>
+              <li><a href="mailto:gabrielngc@gmail.com">rio@bikcraft.com</a></li>
+              <li><a href="tel:+5521983927755">
+                21 9999-9999</a></li>
+            </ul>
+          </div>
+          <p class="loja-horario">08-18h de seg à dom</p>
+        </div>
+      </div>
+      <div class="lojas-item">
+        <div class="lojas-img">
+          <img src="./img/lojas/rj.jpg" alt="localização da loja bikecraft rio de janeiro">
+        </div>
+        <div class="lojas-conteudo">
+          <h3 class="font-1-xl">Rio de Janeiro</h3>
+          <div class="lojas-localizacao">
+            <ul>
+              <li>Rua Ali Perto, 25</li>
+              <li>Rio de Janeiro - RJ</li>
+            </ul>
+            <ul>
+              <li><a href="mailto:gabrielngc@gmail.com">rio@bikcraft.com</a></li>
+              <li><a href="tel:+5521983927755">
+                21 9999-9999</a></li>
+            </ul>
+          </div>
+          <p class="loja-horario">08-18h de seg à dom</p>
+        </div>
+      </div>
+    </article>
     <footer class="footer-bg">
       <div class="container rodape">
         <div class="logo-footer">
