fit: adicionado as localizações da loja e ajustado o box shadow

--- a/contato.html
+++ b/contato.html
@@ -84,8 +84,9 @@
         
       </div>
     </main>
-    <article class="container lojas">
-      <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
+    <article class="lojas-bg">
+      <div class="lojas container">
+        <h2 class="font-1-xxl col-2">lojas locais<span class="cor-p1">.</span></h2>
       <div class="lojas-item">
         <div class="lojas-img">
           <img src="./img/lojas/rj.jpg" alt="localização da loja bikecraft rio de janeiro">
@@ -93,39 +94,41 @@
         <div class="lojas-conteudo">
           <h3 class="font-1-xl">Rio de Janeiro</h3>
           <div class="lojas-localizacao">
-            <ul>
+            <ul class="font-2-s cor-8">
               <li>Rua Ali Perto, 25</li>
               <li>Rio de Janeiro - RJ</li>
             </ul>
-            <ul>
+            <ul class="font-2-s cor-8">
               <li><a href="mailto:gabrielngc@gmail.com">rio@bikcraft.com</a></li>
               <li><a href="tel:+5521983927755">
                 21 9999-9999</a></li>
             </ul>
           </div>
-          <p class="loja-horario">08-18h de seg à dom</p>
+          <p class="loja-horario font-1-s">08-18h de seg à dom</p>
         </div>
       </div>
       <div class="lojas-item">
         <div class="lojas-img">
-          <img src="./img/lojas/rj.jpg" alt="localização da loja bikecraft rio de janeiro">
+          <img src="./img/lojas/sp.jpg" alt="localização da loja bikecraft rio de janeiro">
         </div>
         <div class="lojas-conteudo">
-          <h3 class="font-1-xl">Rio de Janeiro</h3>
+          <h3 class="font-1-xl">São Paulo</h3>
           <div class="lojas-localizacao">
-            <ul>
+            <ul class="font-2-s cor-8">
               <li>Rua Ali Perto, 25</li>
-              <li>Rio de Janeiro - RJ</li>
+              <li>São Paulo - SP</li>
             </ul>
-            <ul>
-              <li><a href="mailto:gabrielngc@gmail.com">rio@bikcraft.com</a></li>
+            <ul class="font-2-s cor-8">
+              <li><a href="mailto:gabrielngc@gmail.com">sp@bikcraft.com</a></li>
               <li><a href="tel:+5521983927755">
-                21 9999-9999</a></li>
+                11 9999-9999</a></li>
             </ul>
           </div>
-          <p class="loja-horario">08-18h de seg à dom</p>
+          <p class="loja-horario font-1-s">08-18h de seg à dom</p>
         </div>
       </div>
+      </div>
+      
     </article>
     <footer class="footer-bg">
       <div class="container rodape">
