--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -16,16 +16,16 @@
   <body>
     <header class="header-bg">
       <div class="container flex-wrap-center p-2">
-        <a href="#">
+        <a href="../index.html">
           <div class="logo">
           <img src="../img/bikcraft.svg" alt="Bikcraft logo">
           </div>
         </a>
         <nav aria-label="primaria">
           <ul class="header-menu">
-            <li><a href="#">bicicletas</a></li>
-            <li><a href="#">seguros</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a href="../bicicletas.html">bicicletas</a></li>
+            <li><a href="../seguros.html">seguros</a></li>
+            <li><a href="../contato.html">contato</a></li>
           </ul>
         </nav>
       </div>
@@ -45,7 +45,7 @@
             A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.
           </p>
           <div class="nimbus-compra">
-            <a href="#" class="btg">comprar agora</a>
+            <a href="../orcamento.html" class="btg">comprar agora</a>
             <div>
               <span class="font-1-xs cor-6">
                 <img src="../img/icones/entrega.svg" alt="">
@@ -119,7 +119,7 @@
       </h2>
       <ul>
         <li>
-          <a href="#">
+          <a href="./magic.html">
             <img src="../img/bicicletas/magic.jpg" alt="Bicicleta Magic">
             <h3 class="font-1-xl">
             Magic Might
@@ -130,7 +130,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./nebula.html">
             <img src="../img/bicicletas/nebula.jpg">
             <h3 class="font-1-xl">
             Nebula Cosmic
@@ -154,7 +154,7 @@
           <p class="font-2-l cor-5">
             Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.
           </p>
-          <a class="btg" href="#">
+          <a class="btg" href="../seguros.html">
             conheça mais
           </a>
         </div>
@@ -185,9 +185,9 @@
         <div class="informacoes">
           <h3 class="font-2-l-b cor-0" style="text-transform: uppercase;">informações</h3>
           <ul class="font-2-m cor-5">
-            <li><a href="#">Bicicletas</a></li>
-            <li><a href="#">Seguros</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="../bicicletas.html">Bicicletas</a></li>
+            <li><a href="../seguros.html">Seguros</a></li>
+            <li><a href="../contato.html">Contato</a></li>
             <li><a href="./termos.html">Termos e Condições</a></li>
           </ul>
         </div>
